package AHP;

import java.util.ArrayList;

public class DataHolder {
    public static ArrayList<String> alternativesList = new ArrayList<>();
    public static ArrayList<String> criteriaList = new ArrayList<>();

    public static int criteriaCount;
    public static int alternativesCount;
}
