package AHP;

public class Alternative {
    public String name;

    public Alternative(String name){
        this.name = name;
    }
}
