package AHP;

public class Criterion {
    public String name;

    public Criterion(String name) {
        this.name = name;
    }

}
