@startuml

title __DECISIONSUPPORTSYSTEM's Class Diagram__\n

  package AHP {
    class AHP {
    }
  }
  

  package AHP {
    class Alternative {
    }
  }
  

  package AHP {
    class Criterion {
    }
  }
  

  package AHP {
    class DataHolder {
    }
  }
  

  package views {
    class Main {
    }
  }
  

  package Math {
    class MathUtils {
    }
  }
  

  package Math {
    class Matrix {
    }
  }
  

  package Controllers {
    class alternativesController {
    }
  }
  

  package Controllers {
    class criteriaController {
    }
  }
  

  package Controllers {
    class homeController {
    }
  }
  

  package Controllers {
    class resultController {
    }
  }
  

  AHP o-- Matrix : criterionComparisonMatrix
  Main -up-|> Application
  alternativesController -up-|> Initializable
  criteriaController -up-|> Initializable
  homeController -up-|> Initializable
  resultController -up-|> Initializable
  resultController o-- AHP : ahp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
